@@ -1,3 +1,6 @@
+- reimplement priority upgrade support through urpmi-5.9's
+  infrastructure
+
 Version 4.4.2.3 - 6 March 2008, Thierry Vignaud
 
 - MandrivaUpdate:
